--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,24 @@ header {
     position:relative;
 }
 
+#google-logo {
+    display: block;
+    margin: 150px auto 25px;
+}
+
+#search-bar {
+    border: 1px solid rgb(88, 86, 86);
+    border-radius: 50px 50px 50px 50px;
+    width: 575px;
+    height: 45px;
+    margin: 10px auto;
+    opacity: 0.3;
+}
+
+#search-bar:hover {
+    box-shadow: 0 0 5px 2px rgb(161, 157, 157);
+}
+
 .container {
     position:relative;
 }
@@ -25,7 +43,7 @@ header {
     height: 30px;
     background-color: #bbb;
     border-radius: 50%;
-    bottom: 9px;
+    bottom: 11px;
     right: 8px;
     opacity: 0;
 }
@@ -36,7 +54,7 @@ header {
 }
 
 #git-icon {
-    margin: 6px 10px 0px 5px;
+    margin: 6px 10px 10px 10px;
     border-radius: 50%;
     border: 5px solid rgba(0,0,0,0.0);
 }
@@ -77,7 +95,7 @@ header .right-btns {
 }
 
 header .gmail-btn{
-    margin: 15px;
+    margin: 15px 5px 5px 5px;
     border: 0;
     background: transparent;
     font-size: 14px;
@@ -85,7 +103,7 @@ header .gmail-btn{
 }
 
 header .images-btn{
-    margin: 15px 0px;
+    margin: 15px 5px 5px 5px;
     border: 0;
     background: transparent;
     font-size: 14px;
