--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,7 @@ header {
 }
 
 #search-bar:hover {
-    box-shadow: 0 0 5px 2px rgb(161, 157, 157);
+    box-shadow: 0 0 2px 2px rgba(211, 204, 204, 0.4);
 }
 
 
@@ -208,8 +208,6 @@ footer {
     font-size: 14px;
     font-family: arial, sans-serif;
 }
-
-
 
 .left-footer {
     display: flex;
